# near-staking-knd

./: .gitignore  Cargo.toml  Design.md  Justfile  LICENSE.md  Procfile  README.md  bors.toml  build.rs  flake.nix  garnix.yaml  pyproject.toml  setup.cfg  system-info.toml  treefmt.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: automerge.yml  build-near-cli.yml  system-info.yml  update-neard-configuration.sh  upgrade-flakes.yml  upgrade-near-cli.yml  upgrade-neard-config.yml  upgrade-neard.yml
docs/: ARCHITECTURE.md  arbitor.drawio  architecture.md  build.md  configuration.md  failover-algorithm.md  failover.drawio  kuutamo-challenge.md  monitoring.md  reference-architecture.drawio  reset-neard.md  run-localnet.md  run-main-test-shard.md  run.md  shardnet-on-aws-lab.md  testnet-on-aws-lab.md
example/: kneard.toml  kuutamo-monitoring.token
nix/: shell.nix
nix/checks/: check-format.nix  flake-module.nix  kneard-unit-tests.nix  kuutamod-nixos-tests.nix  kuutamod-unit-tests.nix
nix/hosts/: flake-module.nix
nix/modules/: disko-partitioning-script.nix  flake-module.nix  hardware.nix  near-prometheus-exporter.nix  network.nix  networkd.nix  raid-config.nix  telegraf.nix  telegrafd.nix  toml-mapping.nix
nix/modules/kneard/: default.nix
nix/modules/kuutamod/: default.nix
nix/modules/near-staking-analytics/: default.nix
nix/modules/neard/: default.nix
nix/modules/neard/mainnet/: config.json  default.nix
nix/modules/neard/shardnet/: config.json  default.nix
nix/modules/neard/testnet/: config.json  default.nix
nix/modules/single-node-archiver/: default.nix  mainnet.nix  testnet.nix
nix/modules/single-node-validator/: consul.nix  default.nix  hardware.nix  mainnet.nix  network.nix  raid-config.nix  testnet.nix  toml-mapping.nix  users.nix
nix/modules/tests/: Justfile  README.md  flake-module.nix  install-nixos.nix  kneard-deploy.nix  kneard-mgr.nix  kneard.nix  kuutamod.nix  monitoring.nix  neard.nix  node_key.json  test-config.toml  validator_key.json
nix/modules/tests/test-flake/: configurations.nix  flake.nix  (+1 more)
nix/pkgs/: db_bench.nix  flake-module.nix  kneard-deploy.nix  kneard-mgr.nix  kuutamo.nix  kuutamod.nix  near-prometheus-exporter.nix  nix-update.nix  remote-pdb.nix  rocksdb-tools.nix  treefmt.nix
nix/pkgs/kneard/: generic.nix  unstable.nix
nix/pkgs/kuutamod/: generic.nix  stable.nix
nix/pkgs/near-cli/: node-packages.json  node-packages.nix  overrides.nix
nix/pkgs/near-staking-analytics/: default.nix
nix/pkgs/neard/: 0001-also-respect-storage-config-when-checking-rocksdb-ve.patch  0001-reduce-max_open_files-when-checking-version-v1.28.0.patch  0001-reduce-max_open_files-when-checking-version.patch  0001-relax-ulimit-check-for-nix-sandbox-build.patch  0001-rm-near-test-contracts-1.32.patch  0001-rm-near-test-contracts-1.34.patch  0001-rm-near-test-contracts-1.35.0-rc.1.patch  0001-rm-near-test-contracts-1.36.0-rc.1.patch  0001-rm-near-test-contracts-1.36.0-rc.2.patch  0001-rm-near-test-contracts.patch  0002-rm-near-test-contracts.patch  0002-rocksdb-max-open.patch  0003-expected-shutdown-metrix-1.35.0-rc.1.patch  0003-expected-shutdown-metrix-1.35.0.patch  0003-expected-shutdown-metrix.patch  0004-1.30.0-rc.2-cargo.lock.patch  bin.nix  generic.nix  neard  nix-update.nix  patch-stable.nix  shardnet.nix  stable-rust-toolchain.toml  stable.nix  unstable-rust-toolchain.toml  unstable.nix
scripts/: benchmark-rocksdb.py  deploy-contracts.py  setup-localnet.py  system-info  wait-file
src/: consul_client.rs  consul_interface.rs  exit_signal_handler.rs  ipc.rs  leader_protocol.rs  lib.rs  log_fmt.rs  near_client.rs  near_config.rs  neard_process.rs  oom_score.rs  proc.rs  prometheus.rs  proxy.rs  scoped_consul_session.rs  settings.rs  ssh.rs  supervisor.rs
src/commands/: active_validator.rs  client.rs  control_commands.rs  maintenance_shutdown.rs  mod.rs  server.rs  system_info.rs
src/deploy/: command.rs  config.rs  dry_update.rs  flake.rs  install.rs  mod.rs  nixos_rebuild.rs  rollback.rs  secrets.rs  update.rs  utils.rs
src/utils/: mod.rs  ssh.rs  version.rs
tests/: cargo.py  command.py  conftest.py  consul.py  kneard.py  kuutamod.py  log_utils.py  near_network.py  network.py  note.py  prometheus.py  root.py  setup_localnet.py  temporary_file.py  test_maintenance_restart.py  test_maintenance_shutdown.py  test_maintenance_shutdown_metrics.py  test_multiple_nodes.py  test_restart.py  test_single_node.py
