[package]
name = "kneard"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
reqwest = { version = "0.11.18", features = ["json"], default-features = false }
anyhow = "1.0.71"
tokio = { version = "1.28.2", features = ["full"] }
hyperlocal = "0.8"
futures-util = "0.3.28"
hyper = { version = "0.14.26", features = [ "server" ] }
prometheus = "0.13.3"
lazy_static = "1.4.0"
nix = "0.26.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.151"
toml = "0.7.4"
toml-example = { version = "0.8.4", default-features = false }
serde_json = "1.0.96"
near-primitives = "0.17.0"
log = { version = "0.4.18", features = ["std"] }
clap = { version = "4.3.1", features = ["derive", "env"] }
regex = "1"
ctrlc = { version = "3.4", features = ["termination"] }
zip = { version = "0.6.6", default-features = false, features = ["aes-crypto", "deflate"] }
# FIXME use github version for toml support
format_serde_error = { version = "0.3.0", features = [ "colored", "serde_json" ], default-features = false, git = "https://github.com/AlexanderThaller/format_serde_error" }
semver = "1.0.17"
url = { version = "2.0", features = ["serde"] }
base64 = "0.21.2"

[[bin]]
name = "kneard-mgr"
path = "src/bin/kneard-mgr.rs"

[[bin]]
name = "kneard-ctl"
path = "src/bin/kneard-ctl.rs"

[features]
# set this for neard-unstable
unstable = []
