[package]
name = "kneard"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
reqwest = { version = "0.11.20", features = ["json"], default-features = false }
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["full"] }
hyperlocal = "0.8"
futures-util = "0.3.28"
hyper = { version = "0.14.27", features = [ "server" ] }
prometheus = "0.13.3"
lazy_static = "1.4.0"
nix = { version = "0.27.1", features = ["process", "signal", "term", "hostname"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.151"
toml = "0.8.0"
toml-example = { version = "0.10.0", default-features = false }
serde_json = "1.0.107"
near-primitives = "0.17.0"
log = { version = "0.4.20", features = ["std"] }
clap = { version = "4.4.4", features = ["derive", "env"] }
regex = "1"
ctrlc = { version = "3.4", features = ["termination"] }
zip = { version = "0.6.6", default-features = false, features = ["aes-crypto", "deflate"] }
# FIXME use github version for toml support
format_serde_error = { version = "0.3.0", features = [ "colored", "serde_json" ], default-features = false, git = "https://github.com/AlexanderThaller/format_serde_error" }
semver = "1.0.19"
url = { version = "2.4", features = ["serde"] }
base64 = "0.21.4"

[[bin]]
name = "kneard-mgr"
path = "src/bin/kneard-mgr.rs"

[[bin]]
name = "kneard-ctl"
path = "src/bin/kneard-ctl.rs"

[features]
# set this for neard-unstable
unstable = []
